--- a/tests/code samples/languages/gleam/build-and-run/gleam.toml
+++ b/tests/code samples/languages/gleam/build-and-run/gleam.toml
@@ -1,4 +1,4 @@
-name = "build_and_run"
+name = "main"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
